--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>sdasfdsfdfsdfdsdsfsfdf</div>
+    <div>Welcome</div>
 </body>
 </html>
